5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1758_1183.log
== TEST (2019-05-23 10:48:07) 
-- CODE:
from numpy import*
x = int(input("insira o numero de termos"))

a = size(x>0)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:49:34) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos")))

a = size(x>0)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:48:17) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0

while (i<size(x)):
	if(x[i] > 0)
	i = i + 1
	print(x)

	
-- ERROR:
File "XXXX", line 7
    if(x[i] > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:50:07) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0

while (i<size(x)):
	if(x[i] > 0):
		i = i + 1
		y = x
	print(y)
	else:
	


	
-- EXECUTION TIME:
0.0324941
-- ERROR:
Error response from daemon: Container 2c9f66bf9e9396091369b4df9271b21ed8b501f57669ac0e9195e976687b891e is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:50:15) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0

while (i<size(x)):
	if(x[i] > 0):
		i = i + 1
		y = x
	print(y)
	else:
	


	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:11:38) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0

while (i<size(x)):
	if(x[i] > 0):
		i = i + 1
		y = x
	print(y)
	else:
		print (x , "nao prestou")
	


	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:11:48) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0

while (i<size(x)):
	if(x[i] > 0):
		i = i + 1
		y = x
	print(y)
	else:
	print (x , "nao prestou")
	


	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:12:04) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0

while (i<size(x)):
	if(x[i] > 0):
		i = i + 1
		y = x
		print(y)
	else:
		print (x , "nao prestou")
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:28:34) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))



for i (x>0):
	print(i)
	


	
-- ERROR:
File "XXXX", line 6
    for i (x>0):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:29:01) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))



for i  in (x>0):
	print(i)
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:30:30) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))



for i  in (x>0):
	print(x[i])
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:40:02) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))



for i  in arange(0,7):
	x[i]=x[i]>0

print(x)
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:43:21) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))



for i  in arange(0,7):
	x[i]=x[i]>0

print(x)

for i in x:
	print(x)
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:47:01) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))



for i  in arange(0,7):
	x[i]= x[i] * 2

print(x)

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:48:00) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))



for i  in arange(0,7):
	x[i]= x[i] > 0

print(x)

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:48:49) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))



for i  in arange(0,5):
	x[i]= x[i] > 0

print(x)

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:56:36) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))
vet = array()
i = 0
while (i<size(x0)):
	if (x[i]>0):
		vet = vet
		i = i + i
else:
	i = i + 1
	
print(vet)
	

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:01:49) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0
while (i<size(x0)):
	if (x[i]>0):
		x = x
		i = i + 1
else:
	i = i + 1
	
print(vet)
	

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:02:07) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0
while (i<size(x)):
	if (x[i]>0):
		x = x
		i = i + 1
else:
	i = i + 1
	
print(vet)
	

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:02:53) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0
while (i<size(x)):
	if (x[i]>0):
		x = x
		i = i + 1
	else:
		i = i + 1
	
	print(vet)
	

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:03:09) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0
while (i<size(x)):
	if (x[i]>0):
		x = x
		i = i + 1
	else:
		i = i + 1
	
	print(x)
	

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:04:04) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0
while (i<size(x)):
	if (x[i]!=-5 and-4):
		x = x
		i = i + 1
	else:
		i = i + 1
	
	print(x)
	

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:04:18) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

i = 0
while (i<size(x)):
	if (x[i]!=-5 and-4):
		x = x
		i = i + 1
	else:
		i = i + 1
	
print(x)
	

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:26:54) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

 
[x for x in a if x >= 0 ]

print(x)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:27:24) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

 
x for x in a if x >= 0 

print(x)

	
-- ERROR:
File "XXXX", line 5
    x for x in a if x >= 0 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:27:28) 
-- CODE:
from numpy import*
x = array(eval(input("insira o numero de termos; ")))

 
x for x in a if x >= 0 

print(x)

	
-- ERROR:
File "XXXX", line 5
    x for x in a if x >= 0 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:27:53) 
-- CODE:
from numpy import*
a = array(eval(input("insira o numero de termos; ")))

 
x for x in a if x >= 0 

print(x)

	
-- ERROR:
File "XXXX", line 5
    x for x in a if x >= 0 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:35:30) 
-- CODE:
from numpy import*
#a = array(eval(input("insira o numero de termos; ")))

>>> a = array[ 1, 2, 3, -3, 6, -1, -3, 1]
>>> [x for x in a if x >= 0 ]
[1, 2, 3, 6, 1]

	
-- ERROR:
File "XXXX", line 4
    >>> a = array[ 1, 2, 3, -3, 6, -1, -3, 1]
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:37:27) 
-- CODE:
from numpy import*
#a = array(eval(input("insira o numero de termos; ")))

def remove_negs(num_list): 
    r = num_list[:]
   for item in num_list: 
       if item < 0: 
           
   print(r)
-- ERROR:
File "XXXX", line 6
    for item in num_list: 
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:41:18) 
-- CODE:
from numpy import*
num_list = array(eval(input("insira o numero de termos; ")))

def remove_negs(num_list): 
    r = num_list[:]
   for item in num_list: 
       if item < 0: 
           
   print(r)
-- ERROR:
File "XXXX", line 6
    for item in num_list: 
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:41:43) 
-- CODE:
from numpy import*
num_list = array(eval(input("insira o numero de termos; ")))

def remove_negs(num_list): 
    r = num_list[:]
	for item in num_list: 
		if item < 0: 
           
   print(r)
-- ERROR:
File "XXXX", line 6
    for item in num_list: 
                         ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:41:52) 
-- CODE:
from numpy import*
num_list = array(eval(input("insira o numero de termos; ")))

def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
		if item < 0: 
           
   print(r)
-- ERROR:
File "XXXX", line 9
    print(r)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:42:02) 
-- CODE:
from numpy import*
num_list = array(eval(input("insira o numero de termos; ")))

def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
	if item < 0: 
           
print(r)
-- ERROR:
File "XXXX", line 9
    print(r)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:42:14) 
-- CODE:
from numpy import*
num_list = array(eval(input("insira o numero de termos; ")))

def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
	if item < 0: 
	print(r)
-- ERROR:
File "XXXX", line 8
    print(r)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:42:31) 
-- CODE:
from numpy import*
num_list = array(eval(input("insira o numero de termos; ")))

def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
	if item < 0: 
print(r)
-- ERROR:
File "XXXX", line 8
    print(r)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:42:41) 
-- CODE:
from numpy import*
num_list = array(eval(input("insira o numero de termos; ")))

def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
	if item < 0: 
	print(r)
-- ERROR:
File "XXXX", line 8
    print(r)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:42:47) 
-- CODE:
from numpy import*
num_list = array(eval(input("insira o numero de termos; ")))

def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
	if item < 0: 
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:43:23) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
	if item < 0: 
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:44:23) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))
num_input = array()
def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
	if item < 0: 
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:45:02) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))
num_input = array(0,0)
def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
	if item < 0: 
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:45:08) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))
num_input = array(0,)
def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
	if item < 0: 
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:45:57) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))
num_list = array(0,)
def remove_negs(num_list): 
    r = num_list[:]
for item in num_list: 
	if item < 0: 
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:49:36) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))
r.remove(0<)
print(r)
-- ERROR:
File "XXXX", line 3
    r.remove(0<)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:10:02) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

lista_valida = []
for elem in lista:
    if r > 0:
      lista_valida.append(x)
print (lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:10:29) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

lista_valida = []
for elem in lista:
    if r > 0:
      lista_valida.append(x)
print (lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:10:53) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

lista_valida = []
for r in lista:
    if r > 0:
      lista_valida.append(x)
print (lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:11:18) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

lista_valida = [0]
for r in lista:
    if r > 0:
      lista_valida.append(x)
print (lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:22:38) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))
n = array(0,0,0,0,0)
i = 0
while (i<size(r)):
	if (r[i]>0):
		n = array(r[i])+ n[i]
		i = i + 1
	else:
		i = i + 1
		
print(n)
print(size[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:23:33) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))
n = array(eval(0,0,0,0,0))
i = 0
while (i<size(r)):
	if (r[i]>0):
		n = array(r[i])+ n[i]
		i = i + 1
	else:
		i = i + 1
		
print(n)
print(size[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:27:54) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

v0 = zeros(5, dtype=int)
i = 0
while (i<size(r)):
	if (r[i]>0):
		v0 = array(r[i])+ v0[i]
		i = i + 1
	else:
		i = i + 1
		
print(v0)
print(size[v0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:28:30) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

v0 = zeros(5, dtype=int)
i = 0
while (i<size(r)):
	if (r[i]>0):
		v0 = r[i]+ v0[i]
		i = i + 1
	else:
		i = i + 1
		
print(v0)
print(size[v0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:58:43) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
		print(p)
		
	
-- ERROR:
File "XXXX", line 15
    print(p)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:59:09) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
	print(p)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:00:41) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:19:33) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = zeros(p, dtype=int)


while (pos<p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:21:02) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = zeros(p, dtype=int)


	while (pos<p):
		if(r[pos]>0):
			new = new[pos] + r[pos]
			pos = pos + 1
	print(new)
		
	
		
	
-- ERROR:
File "XXXX", line 21
    while (pos<p):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:21:26) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = zeros(p, dtype=int)


while (pos<p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:21:42) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = zeros(p, dtype=int)


while (pos<p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:22:41) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = array()


while (pos<p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:23:18) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = array([])


while (pos<p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:24:26) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = array([])


while (pos<p):
	if(r[pos]>0):
		new = new + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:27:27) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = zeros(p, dtype = int)


while (pos<p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:27:45) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = zeros(p, dtype = int)


while (pos<p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:29:28) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = zeros(p, dtype = int)

while (pos<=p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:17:46) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
print(p)

pos = 0
new = zeros(p, dtype = int)

while (pos<=p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:18:27) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

pos = 0
new = zeros(p, dtype = int)

while (pos<=p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:20:43) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

pos = 0
new = zeros(p, dtype = int)

while (pos<=p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		
	else:
		print(nao)
	pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:21:25) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

pos = 0
new = zeros(p, dtype = int)

while (pos<=p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		
	else:
		print("nao")
	pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:22:53) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

pos = 0
new = zeros(p, dtype = int)
print(new)

while (pos<=p):
	if(r[pos]>0):
		new = new[pos] + r[pos]
		
	else:
		print("nao")
	pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:26:18) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

pos = 0
new = zeros(p, dtype = int)


while (pos<=p):
	if(r[pos]>0):
		new = new[1] + r[1]
	elif r[pos]<0:
		new = new[pos] + r[pos]
	pos = pos + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:28:08) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

a = 0
new = zeros(p, dtype = int)


while (a<=p):
	if(r[a]>0):
		new = new[a] + r[a]
		print(new)
	elif r[pos]<0:
		b = new[a] + r[a]
		print(b)
	a = a + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:28:38) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

a = 0
new = zeros(p, dtype = int)


while (a<=p):
	if(r[a]>0):
		new = new[a] + r[a]
		print(new)
	elif r[a]<0:
		b = new[a] + r[a]
		print(b)
	a = a + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:29:22) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

a = 0
new = zeros(p, dtype = int)


while (a<=p):
	if(r[a]>0):
		new = new[a] + r[a]
		print(new)
	a = a + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:30:46) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

a = 0
new = []


while (a<=p):
	if(r[a]>0):
		new = new + r[a]
	a = a + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:31:48) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

a = 0
new = [0,0,0,0,0]


while (a<=p):
	if(r[a]>0):
		new = new[a] + r[a]
	a = a + 1
print(new)
		
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:59:38) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

lista_valida = []
for elem in r :
    if elem > 0:
        lista_valida.append(elem)
print (lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:00:20) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	

lista_valida = []
for elem in r :
    if elem > 0:
        lista_valida.append(elem)
print (lista_valida)
-- EXECUTION TIME:
0.567478
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:06:28) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
a=0
b = 0
lista_valida = []
while(a<=p)
    if r[a] > 0:
        lista_valida.append(r)
print (lista_valida)
-- ERROR:
File "XXXX", line 18
    while(a<=p)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:06:40) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
a=0
b = 0
lista_valida = []
while (a<=p):
    if r[a] > 0:
        lista_valida.append(r)
print (lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:03:23) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = []
for elem in r:
    if elem > 0:
        lista_valida.append(elem)
print (array(eval(lista_valida)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:04:59) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = eval([])
for elem in r:
    if elem > 0:
        lista_valida.append(elem)
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:19:55) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = []
a = 0
while (a<p):
	if(r[a]>0):
		lista_valida = lista_valida + r[a]
		a = a + 1
	else:
		a = a + 1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:20:56) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = []
a = 1
while (a<p):
	if(r[1]>0):
		lista_valida = lista_valida + r[1]
		a = a + 1
	else:
		a = a + 1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:22:21) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = [0,0,0,0,0]
a = 0
while (a<p):
	if(r[a]>0):
		lista_valida = lista_valida[a] + r[a]
		a = a + 1
	else:
		a = a + 1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:29:30) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = 0
a = 0
while (a<p):
	if(r[a]>0):
		lista_valida = lista_valida + r[a]
		a = a + 1
	else:
		a = a + 1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:30:50) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = []
a = 0
while (a<size(r)):
	if(r[a]>0):
		lista_valida = lista_valida + r[a]
		a = a + 1
	else:
		a = a + 1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:36:00) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = [0]
a = 0
while (a<size(r)):
	if(r[a]>0):
		lista_valida = lista_valida + r[a]
		a = a + 1
	else:
		a = a + 1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:40:24) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = [0,0,0,0,0]
a = 0
while (a<size(r)):
	if(r[a]>0):
		lista_valida[a] = lista_valida[a] + r[a]
		a = a + 1
	else:
		a = a + 1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:40:24) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = [0,0,0,0,0]
a = 0
while (a<size(r)):
	if(r[a]>0):
		lista_valida[a] = lista_valida[a] + r[a]
		a = a + 1
	else:
		a = a + 1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:57:05) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = zeros(p, dtipe=int)
a = 0
e = 0
while (e < size(r)):
	if(r[e]>0):
		r[e] = lista_valida[a]
		a = a + 1
		e = e +1
	else:
		a = a + 1
		e = e +1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:57:36) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = zeros(p, dtipe=int)
a = 0
e = 0
while (e < size(r)):
	if(r[e]>0):
		r[e] = lista_valida[a]
		a = a + 1
		e = e +1
	else:
		a = a + 1
		e = e +1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:57:57) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = zeros(p, dtype=int)
a = 0
e = 0
while (e < size(r)):
	if(r[e]>0):
		r[e] = lista_valida[a]
		a = a + 1
		e = e +1
	else:
		a = a + 1
		e = e +1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:59:44) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = zeros(p, dtype=int)
a = 0
e = 0
while (e < size(lista_valida)):
	if(r[e]>0):
		r[e] = lista_valida[a]
		a = a + 1
		e = e +1
	else:
		a = a + 1
		e = e +1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:05:41) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = zeros(p, dtype=int)
a = 0
e = 0
while (a < size(lista_valida)):
	if(r[e]>0):
		lista_valida[a] = r[e] 
		a = a + 1
		e = e +1
	else:
		a = a + 1
		e = e +1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:06:08) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = zeros(p, dtype=int)
a = 0
e = 0
while (a < size(lista_valida)):
	if(r[e]>0):
		lista_valida[a] = r[e] 
		a = a + 1
		e = e +1
	else:
		a = a + 1
		e = e +1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:08:27) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = zeros(p, dtype=int)
e = 0
a = 0
while (a < size(lista_valida)):
	if(r[e]>0):
		lista_valida[a] = r[e] 
		a = a + 1
		e = e +1
	else:
		e = e +1
print(lista_valida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:12:07) 
-- CODE:
from numpy import*
r = array(eval(input("insira o numero de termos; ")))

i = 0
p = 0
n = 0

while(i<size(r)):
	if r[i]>0:
		p = p + 1
	else:
		n = n + 1
	i = 1 + i
	
lista_valida = zeros(p, dtype=int)
e = 0
a = 0
while (a < size(lista_valida)):
	if(r[e]>0):
		lista_valida[a] = r[e] 
		a = a + 1
		e = e +1
	else:
		e = e +1
print(lista_valida)
-- EXECUTION TIME:
0.32853
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
